@@ -21,7 +21,7 @@
 			<keywords id="Entity Relations" color="#881280" useforautocomplete="yes">
 				<regex>\b(complements)\(</regex>
 				<regex>\b(extends)\(</regex>
-				<regex>\b(i(mp(orts|lements)|nstantiates))\(</regex>
+				<regex>\b(i(?:mp(?:orts|lements)|nstantiates))\(</regex>
 				<regex>\b(specializes)\(</regex>
 			</keywords>
 
@@ -40,7 +40,7 @@
 			</keywords>
 
 			<keywords id="Control Constructs" color="#1A1AA6" useforautocomplete="yes">
-				<regex>\b(ca(ll|tch))\(</regex>
+				<regex>\b(ca(?:ll|tch))\(</regex>
 				<regex>\b(throw)\(</regex>
 				<regex>\b(true)[^[(A-Za-z_]]</regex>
 				<regex>\b(fail)[^[(A-Za-z_]]</regex>
@@ -52,37 +52,37 @@
 
 			<keywords id="Built-in Methods" color="#1A1AA6" useforautocomplete="yes">
 				<regex>\b(parameter)\(</regex>
-				<regex>\b(se(lf|nder))\(</regex>
+				<regex>\b(se(?:lf|nder))\(</regex>
 				<regex>\b(this)\(</regex>
 				<regex>\b(current_predicate)\(</regex>
 				<regex>\b(predicate_property)\(</regex>
-				<regex>\b(a(bolish|ssert(a|z)))\(</regex>
+				<regex>\b(a(?:bolish|ssert(?:a|z)))\(</regex>
 				<regex>\b(clause)\(</regex>
-				<regex>\b(retract(all)?)\(</regex>
-				<regex>\b((bag|set)of)\(</regex>
-				<regex>\b(f(ind|or)all)\(</regex>
+				<regex>\b(retract(?:all)?)\(</regex>
+				<regex>\b((?:bag|set)of)\(</regex>
+				<regex>\b(f(?:ind|or)all)\(</regex>
 				<regex>\b(before)\(</regex>
 				<regex>\b(after)\(</regex>
-				<regex>\b(expand_(goal|term))\(</regex>
-				<regex>\b((goal|term)_expansion)\(</regex>
+				<regex>\b(expand_(?:goal|term))\(</regex>
+				<regex>\b((?:goal|term)_expansion)\(</regex>
 				<regex>\b(phrase)\(</regex>
 			</keywords>
 
 			<keywords id="Built-in Predicates" color="#1A1AA6" useforautocomplete="yes">
-				<regex>\b(current_(object|protocol|category|event))\(</regex>
-				<regex>\b(create_(object|protocol|category))\(</regex>
-				<regex>\b((object|protocol|category)_property)\(</regex>
-				<regex>\b(abolish_(object|protocol|category|events))\(</regex>
+				<regex>\b(current_(?:object|protocol|category|event))\(</regex>
+				<regex>\b(create_(?:object|protocol|category))\(</regex>
+				<regex>\b((?:object|protocol|category)_property)\(</regex>
+				<regex>\b(abolish_(?:object|protocol|category|events))\(</regex>
 				<regex>\b(complements_object)\(</regex>
-				<regex>\b(extends_(object|protocol|category))\(</regex>
-				<regex>\b(imp(lements_protocol|orts_category))\(</regex>
-				<regex>\b((instantiat|specializ)es_class)\(</regex>
+				<regex>\b(extends_(?:object|protocol|category))\(</regex>
+				<regex>\b(imp(?:lements_protocol|orts_category))\(</regex>
+				<regex>\b((?:instantiat|specializ)es_class)\(</regex>
 				<regex>\b(define_events)\(</regex>
-				<regex>\b((se|curren)t_logtalk_flag)\(</regex>
-				<regex>\b(logtalk_(compile|l(ibrary_path|oad)))\(</regex>
+				<regex>\b((?:se|curren)t_logtalk_flag)\(</regex>
+				<regex>\b(logtalk_(?:compile|l(?:ibrary_path|oad)))\(</regex>
 				<regex>\b(forall)\(</regex>
 				<!-- <regex>\b(retractall)\(</regex> -->
-				<regex>\b(threaded(_(call|once|ignore|exit|peek|wait|notify))?)\(</regex>
+				<regex>\b(threaded(?:_(?:call|once|ignore|exit|peek|wait|notify))?)\(</regex>
 			</keywords>
 
 			<keywords id="Other Built-in Predicates" color="#1A1AA6" useforautocomplete="yes">
@@ -95,7 +95,7 @@
 				<regex>\b(integer)\(</regex>
 				<regex>\b(float)\(</regex>
 				<regex>\b(compound)\(</regex>
-				<regex>\b((non)?var)\(</regex>
+				<regex>\b((?:non)?var)\(</regex>
 				<regex>\b(number)\(</regex>
 				<!-- Term comparison -->
 				<regex>(==)</regex>
@@ -130,7 +130,7 @@
 				<regex>\b(mod)\(</regex>
 				<regex>\b(abs)\(</regex>
 				<regex>\b(sign)\(</regex>
-				<regex>\b(float(_(integer|fractional)_part)?)\(</regex>
+				<regex>\b(float(?:_(?:integer|fractional)_part)?)\(</regex>
 				<regex>\b(floor)\(</regex>
 				<regex>\b(truncate)\(</regex>
 				<regex>\b(round)\(</regex>
@@ -150,7 +150,7 @@
 				<regex>(\\/)</regex>
 				<regex>(\\)</regex>
 				<!-- Stream selection and control -->
-				<regex>\b((curren|se)t_(in|out)put)\(</regex>
+				<regex>\b((?:curren|se)t_(?:in|out)put)\(</regex>
 				<regex>\b(open)\(</regex>
 				<regex>\b(close)\(</regex>
 				<regex>\b(flush_output)\(</regex>
@@ -160,28 +160,28 @@
 				<regex>\b(flush_output)[^[(A-Za-z_]]</regex>
 				<regex>\b(at_end_of_stream)[^[(A-Za-z_]]</regex>
 				<!-- Character input/output -->
-				<regex>\b((get|p(eek|ut))_c(har|ode))\(</regex>
+				<regex>\b((?:get|p(?:eek|ut))_c(?:har|ode))\(</regex>
 				<regex>\b(nl)\(</regex>
 				<regex>\b(nl)\b</regex>
 				<!-- Byte input/output -->
-				<regex>\b((get|peek|put)_byte)\(</regex>
+				<regex>\b((?:get|peek|put)_byte)\(</regex>
 				<!-- Term input/output -->
-				<regex>\b(read(_term)?)\(</regex>
-				<regex>\b(write(q)?)\(</regex>
-				<regex>\b(write_(canonical|term))\(</regex>
-				<regex>\b((current_)?op)\(</regex>
-				<regex>\b((current_)?char_conversion)\(</regex>
+				<regex>\b(read(?:_term)?)\(</regex>
+				<regex>\b(write(?:q)?)\(</regex>
+				<regex>\b(write_(?:canonical|term))\(</regex>
+				<regex>\b((?:current_)?op)\(</regex>
+				<regex>\b((?:current_)?char_conversion)\(</regex>
 				<!-- Logic and control -->
 				<regex>(\\\+)</regex>
 				<regex>\b(once)\(</regex>
 				<regex>\b(repeat)[^[(A-Za-z_]]</regex>
 				<!-- Atomic term processing -->
-				<regex>\b(atom_(length|c(hars|o(ncat|des))))\(</regex>
+				<regex>\b(atom_(?:length|c(?:hars|o(?:ncat|des))))\(</regex>
 				<regex>\b(sub_atom)\(</regex>
 				<regex>\b(char_code)\(</regex>
-				<regex>\b(number_c(har|ode)s)\(</regex>
+				<regex>\b(number_c(?:har|ode)s)\(</regex>
 				<!-- Implementation defined hooks functions -->
-				<regex>\b((se|curren)t_prolog_flag)\(</regex>
+				<regex>\b((?:se|curren)t_prolog_flag)\(</regex>
 				<regex>\b(halt)\(</regex>
 				<regex>\b(halt)[^[(A-Za-z_]]</regex>
 			</keywords>
@@ -194,11 +194,11 @@
 			</keywords>
 
 			<keywords id="Numbers" color="#bf4b18" useforautocomplete="no">
-				<regex>(?&lt;=[^[A-Za-z_0-9]]|^)(\d+((\.\d+)?([eE]([-+])?\d+)?)?)</regex>
-				<regex>(?&lt;=[^[A-Za-z_0-9]]|^)(0b[0-1]+)</regex>
-				<regex>(?&lt;=[^[A-Za-z_0-9]]|^)(0o[0-7]+)</regex>
-				<regex>(?&lt;=[^[A-Za-z_0-9]]|^)(0x\h+)</regex>
-				<regex>(?&lt;=[^[A-Za-z_0-9]]|^)(0'.)</regex>
+				<regex>(?&lt;=[^\w\d]|^)(0b[0-1]+)</regex>
+				<regex>(?&lt;=[^\w\d]|^)(0o[0-7]+)</regex>
+				<regex>(?&lt;=[^\w\d]|^)(0x\h+)</regex>
+				<regex>(?&lt;=[^\w\d]|^)(0'.)</regex>
+				<regex>(?&lt;=[^\w\d]|^)([+-]?\d+(?:\.\d+)?(?:[eE](?:[+-])?\d+)?)</regex>
 			</keywords>
 
 			<keywords id="Metapredicate Operators" color="#0000ff" useforautocomplete="no">
@@ -210,24 +210,24 @@
 				<regex>:-\s(object)\(</regex>
 				<regex>:-\s(protocol)\(</regex>
 				<regex>:-\s(category)\(</regex>
-				<regex>:-\s(end_(object|protocol|category))\.</regex>
+				<regex>:-\s(end_(?:object|protocol|category))\.</regex>
 				<regex>:-\s(alias)\(</regex>
-				<regex>:-\s(e(n(coding|sure_loaded)|xport))\(</regex>
+				<regex>:-\s(e(?:n(?:coding|sure_loaded)|xport))\(</regex>
 				<regex>:-\s(initialization)\(</regex>
 				<regex>:-\s(info)\(</regex>
-				<regex>:-\s(mod(e|ule))\(</regex>
+				<regex>:-\s(mod(?:e|ule))\(</regex>
 				<regex>:-\s(dynamic)\(</regex>
 				<regex>:-\s(dynamic)\.</regex>
-				<regex>:-\s((el)?if)\(</regex>
-				<regex>:-\s(e(lse|ndif))\.</regex>
+				<regex>:-\s((?:el)?if)\(</regex>
+				<regex>:-\s(e(?:lse|ndif))\.</regex>
 				<regex>:-\s(discontiguous)\(</regex>
-				<regex>:-\s(p(ublic|r(otected|ivate)))\(</regex>	
-				<regex>:-\s(m(eta_predicate|ultifile))\(</regex>		
+				<regex>:-\s(p(?:ublic|r(?:otected|ivate)))\(</regex>	
+				<regex>:-\s(m(?:eta_predicate|ultifile))\(</regex>		
 				<regex>:-\s(op)\(</regex>	
 				<regex>:-\s(calls)\(</regex>
-				<regex>:-\s(use(s|_module))\(</regex>
+				<regex>:-\s(use(?:s|_module))\(</regex>
 				<regex>:-\s(reexport)\(</regex>
-				<regex>:-\s(s(et_(logtalk|prolog)_flag|ynchronized))\(</regex>
+				<regex>:-\s(s(?:et_(?:logtalk|prolog)_flag|ynchronized))\(</regex>
 				<regex>:-\s(synchronized)\.</regex>
 				<regex>:-\s(threaded)\.</regex>
 			</keywords>
